# xiaozhi_qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  auto.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  microphone_manager.cpp  microphone_manager.h  opus.sh  opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h  pcm.sh  project.pro  speaker_manager.cpp  speaker_manager.h  test_opus_encoder.cpp  test_sine_wave.cpp  test_speaker_manager.cpp  vad_processor.cpp  vad_processor.h  wake_word_detector.cpp  wake_word_detector.h  webrtcvad.cpp  webrtcvad.h  websocket_client.cpp  websocket_client.h  xiaozhi_qt.pro
